Boulderdash: animations using Lwt
Ignore-this: a8688a377f5c088094011bcac79a78ac

darcs-hash:20100510110815-41a61-c7fa80707e18dd7eff42671c0a12f3723e671258

--- a/examples/boulderdash/Makefile
+++ b/examples/boulderdash/Makefile
@@ -1,9 +1,11 @@
 
 boulderdash.js: boulderdash
-	../../compile < boulderdash > boulderdash.js
+	../../compile boulderdash
 
 boulderdash: jSOO.ml js.ml boulderdash.ml stubs.c
-	ocamlc -custom -o boulderdash jSOO.ml js.ml boulderdash.ml stubs.c
+	ocamlfind ocamlc -verbose -package lwt -linkpkg -custom -o boulderdash \
+		-I ../../lib lwt_js.cmo \
+		jSOO.ml js.ml boulderdash.ml stubs.c
 
 clean:
 	rm -f *.cm[io] *.o boulderdash boulderdash.js
