--- a/.hgignore
+++ b/.hgignore
@@ -1,7 +1,9 @@
 syntax:glob
-*.cm[iox]
-*.o
+*.cm[ioxa]
+*.[ao]
+*.so
 *~
 compile{,.opt}
+ocaml2js
 private
 examples/boulderdash/boulderdash{,.js}
