--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,2 +1,20 @@
-all:
-	ocamlfind ocamlc -c -package lwt lwt_js.mli lwt_js.ml
+
+OBJS=js.cmo nullable.cmo jsString.cmo lwt_js.cmo
+LIB=ocaml2js
+
+all: $(LIB).cma
+
+$(LIB).cma: $(OBJS)
+	ocamlmklib -o $(LIB) $(OBJS)
+
+%.cmo: %.ml
+	ocamlfind ocamlc -package lwt -c $<
+
+%.cmi: %.mli
+	ocamlc -c $<
+
+depend:
+	find . -maxdepth 1 -name private -prune -o -regex ".*\\.mli?" | \
+	xargs ocamldep > .depend
+
+include .depend
