--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,8 @@
 
-OBJS=js.cmo nullable.cmo jsString.cmo jsArray.cmo lwt_js.cmo stubs.o dom.cmo
+MLOBJS=js.cmo nullable.cmo jsString.cmo jsArray.cmo lwt_js.cmo dom.cmo
+COBJS= stubs.o
+OBJS=$(MLOBJS) $(COBJS)
+
 LIB=ocaml2js
 
 all: $(LIB).cma
@@ -11,10 +14,20 @@ $(LIB).cma: $(OBJS)
 	ocamlfind ocamlc -package lwt -c $<
 
 %.cmi: %.mli
-	ocamlc -c $<
+	ocamlfind ocamlc -package lwt -c $<
 
 %.o: %.c
 	ocamlfind ocamlc -package lwt -c $<
+
+stubs.c: $(MLOBJS:cmo=ml)
+	(echo "#include <stdlib.h>"; \
+	 echo "#define D(f) void f () { exit(1); }"; \
+	 sed -n -e 's/external.*"\([^"%]*\)"/D(\1)/p' $(MLOBJS:cmo=ml)) \
+        > stubs.c
+
+clean:
+	rm -f *.cm[ioa] *.[ao] *.so
+	rm -f stubs.c
 
 depend:
 	find . -maxdepth 1 -name private -prune -o -regex ".*\\.mli?" | \
