Start of a syntax extension
Ignore-this: f282e1283a603f71ba99943d6b06e091

darcs-hash:20100512095649-41a61-2abb5ec0de772ae23c368dd6879b93eb3fca99c7

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,10 +5,13 @@ OBJS=$(MLOBJS) $(COBJS)
 
 LIB=ocaml2js
 
-all: $(LIB).cma
+all: $(LIB).cma pa_js.cmo
 
 $(LIB).cma: $(OBJS)
 	ocamlmklib -o $(LIB) $(OBJS)
+
+pa_js.cmo: pa_js.ml
+	ocamlfind ocamlc -package camlp4.extend,camlp4.quotations -syntax camlp4o -c pa_js.ml
 
 %.cmo: %.ml
 	ocamlfind ocamlc -package lwt -c $<
@@ -22,7 +25,8 @@ $(LIB).cma: $(OBJS)
 stubs.c: $(MLOBJS:cmo=ml)
 	(echo "#include <stdlib.h>"; \
 	 echo "#define D(f) void f () { exit(1); }"; \
-	 sed -n -e 's/external.*"\([^"%]*\)"/D(\1)/p' $(MLOBJS:cmo=ml)) \
+	 (sed -n -e 's/external.*"\([^"%]*\)"/D(\1)/p' $(MLOBJS:cmo=ml) | \
+	  sort | uniq)) \
         > stubs.c
 
 clean:
