Started new DOM implementation
Ignore-this: db90479d92abaafe94f2d023b2eee558

darcs-hash:20100512213024-41a61-36e38d613b888195c41085775f30ff8600eba302

--- a/examples/minesweeper/Makefile
+++ b/examples/minesweeper/Makefile
@@ -12,7 +12,7 @@ minesweeper: $(OBJS) ../../lib/ocaml2js.cma
 		$(OBJS)
 
 %.cmo: %.ml
-	ocamlc -I ../../lib -g -c $<
+	ocamlc -pp "camlp4o ../../lib/pa_js.cmo" -I ../../lib -g -c $<
 
 main.cmo: minesweeper.cmo
 
