Examples converted to new DOM API
Ignore-this: 62a7b46b8deff7f00cb2e9a00c4227eb

darcs-hash:20100514213853-41a61-566ecf654705a0c4a4fd4a1b6dde34ece47b19c0

--- a/examples/boulderdash/Makefile
+++ b/examples/boulderdash/Makefile
@@ -4,13 +4,13 @@ OCAML2JS=../../ocaml2js
 boulderdash.js: boulderdash $(OCAML2JS)
 	$(OCAML2JS) boulderdash
 
-boulderdash: boulderdash.ml ../../lib/ocaml2js.cma
+boulderdash: boulderdash.cmo
 	ocamlfind ocamlc -package lwt -linkpkg -o boulderdash \
 		-I ../../lib ocaml2js.cma \
-		boulderdash.ml
+		boulderdash.cmo
 
-%.cmo: %.ml
-	ocamlc -g -c $<
+%.cmo: %.ml ../../lib/ocaml2js.cma
+	ocamlfind ocamlc -package lwt -pp "camlp4o ../../lib/pa_js.cmo" -I ../../lib -g -c $<
 
 %.cmi: %.mli
 	ocamlc -g -c $<
