--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,6 @@
 
-MLOBJS=js.cmo nullable.cmo jsString.cmo jsArray.cmo dom.cmo lwt_js.cmo goog.cmo
+MLOBJS=js.cmo nullable.cmo jsString.cmo jsArray.cmo dom.cmo lwt_js.cmo \
+	goog.cmo goog_net.cmo
 COBJS= stubs.o
 OBJS=$(MLOBJS) $(COBJS)
 
