--- a/obrowser/Makefile
+++ b/obrowser/Makefile
@@ -1,6 +1,13 @@
 all: lwt_obrowser.cma
 
-lwt_obrowser.cma: lwt_obrowser.mli lwt_obrowser.ml
-	ocamlfind ocamlc -I ../lib -package lwt -c lwt_obrowser.mli
-	ocamlfind ocamlc -I ../lib  -pp "camlp4o ../lib/pa_js.cmo" -package lwt -c lwt_obrowser.ml
-	ocamlc -a -o  $@ lwt_obrowser.cmo
+jslib.cmo:
+	ocamlc -pack -o $@ ../lib/js.cmo ../lib/jsString.cmo ../lib/dom.cmo ../lib/lwt_js.cmo
+
+lwt_obrowser.cma: lwt_obrowser.mli lwt_obrowser.ml jslib.cmo stubs.o
+	ocamlfind ocamlc -package lwt -c lwt_obrowser.mli
+	ocamlfind ocamlc  -pp "camlp4o ../lib/pa_js.cmo" -package lwt -c lwt_obrowser.ml
+	ocamlmklib -o lwt_obrowser jslib.cmo lwt_obrowser.cmo ../lib/stubs.o stubs.o
+
+stubs.o: stubs.c
+	ocamlc -c stubs.c
+
