--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,4 +1,4 @@
-FILES=ieee_754.js int64.js md5.js mlString.js stdlib.js
+FILES=ieee_754.js int64.js md5.js mlString.js stdlib.js jslib.js
 
 runtime.js: $(FILES)
 	cat $(FILES) > runtime.js
