New examples: sudoku and canvas
Ignore-this: f551a0fca36bafb16d3cc2829ba16823

darcs-hash:20100604232813-41a61-260ad1e234545cdd85011f3e912ccd95c515e97c

--- a/.hgignore
+++ b/.hgignore
@@ -9,6 +9,8 @@ private
 examples/boulderdash/boulderdash{,.js}
 examples/minesweeper/minesweeper{,.js}
 examples/cubes/cubes{,.js}
+examples/canvas/canvas{,.js}
+examples/sudoku/sudoku{,.js}
 lib/stubs.c
 obrowser/vm.js
 runtime/runtime.js
