--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -2,3 +2,6 @@ FILES=ieee_754.js int64.js md5.js mlString.js stdlib.js jslib.js
 
 runtime.js: $(FILES)
 	cat $(FILES) > runtime.js
+
+clean:
+	rm -f runtime.js
