--- a/examples/minesweeper/Makefile
+++ b/examples/minesweeper/Makefile
@@ -1,21 +1,6 @@
-
-OCAML2JS=../../ocaml2js
-JSFILES=../../runtime/runtime.js
-OCAMLC=ocamlfind ocamlc -package lwt -pp "camlp4o ../../lib/pa_js.cmo" -I ../../lib
-STDLIB=ocaml2js.cma
-
 OBJS=minesweeper.cmo main.cmo
+NAME=minesweeper
 
-minesweeper.js: minesweeper $(OCAML2JS) $(JSFILES)
-	$(OCAML2JS) $(JSFILES) minesweeper
-
-minesweeper: $(OBJS)
-	$(OCAMLC) -linkpkg -o $@ $(STDLIB) $^
-
-%.cmo: %.ml ../../lib/ocaml2js.cma
-	$(OCAMLC) -g -c $<
+include ../Makefile.common
 
 main.cmo: minesweeper.cmo
-
-clean:
-	rm -f *.cm[io] minesweeper minesweeper.js
