Rotating earth example
Ignore-this: 9f74a78ab1caa26d738cd7f2c9404c78

darcs-hash:20100609190819-41a61-6221602b6ce0fe072fb3759f23977026678ec813

--- a/.hgignore
+++ b/.hgignore
@@ -11,6 +11,7 @@ examples/minesweeper/minesweeper{,.js}
 examples/cubes/cubes{,.js}
 examples/canvas/canvas{,.js}
 examples/sudoku/sudoku{,.js}
+examples/planet/planet{,.js}
 lib/stubs.c
 obrowser/vm.js
 runtime/runtime.js
