--- a/.hgignore
+++ b/.hgignore
@@ -6,12 +6,12 @@ syntax:glob
 compile{,.opt}
 ocaml2js
 private
-examples/boulderdash/boulderdash{,.js}
-examples/minesweeper/minesweeper{,.js}
-examples/cubes/cubes{,.js}
-examples/canvas/canvas{,.js}
-examples/sudoku/sudoku{,.js}
-examples/planet/planet{,.js}
+examples/boulderdash/boulderdash{.byte,.js}
+examples/minesweeper/minesweeper{.byte,.js}
+examples/cubes/cubes{.byte,.js}
+examples/canvas/canvas{.byte,.js}
+examples/sudoku/sudoku{.byte,.js}
+examples/planet/planet{.byte,.js}
 lib/stubs.c
 obrowser/vm.js
 runtime/runtime.js
