--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,5 +1,12 @@
-all:
-	for i in */; do make -C $$i; done
+
+TARGETS=*/
+
+.PHONY: $(TARGETS)
+
+all: $(TARGETS)
+
+$(TARGETS):
+	make -C $@
 
 clean:
-	for i in */; do make -C $$i clean; done
+	for i in $(TARGETS); do make -C $$i clean; done
