--- a/examples/Makefile.common
+++ b/examples/Makefile.common
@@ -1,17 +1,19 @@
 
-OCAML2JS=../../ocaml2js
+include ../../Makefile.conf
+
+COMP=../../compiler/$(COMPILER)
 JSFILES=../../runtime/runtime.js
-OCAMLC=ocamlfind ocamlc -package lwt -pp "camlp4o ../../lib/pa_js.cmo" -I ../../lib
-STDLIB=ocaml2js.cma
+OCAMLC=ocamlfind ocamlc -package lwt -pp "camlp4o ../../lib/syntax/pa_js.cmo" -I ../../lib
+STDLIB=$(LIBNAME).cma
 
-$(NAME).js: $(NAME) $(OCAML2JS) $(JSFILES)
-	$(OCAML2JS) $(JSFILES) $(NAME) $(OPTIONS)
+$(NAME).js: $(NAME).byte $(COMP) $(JSFILES)
+	$(COMP) -noruntime $(JSFILES) $(NAME).byte $(OPTIONS)
 
-$(NAME): $(OBJS)
+$(NAME).byte: $(OBJS)
 	$(OCAMLC) -linkpkg -o $@ $(STDLIB) $^
 
-%.cmo: %.ml ../../lib/ocaml2js.cma
+%.cmo: %.ml ../../lib/$(STDLIB)
 	$(OCAMLC) -g -c $<
 
 clean:
-	rm -f *.cm[io] $(NAME) $(NAME).js
+	rm -f *.cm[io] $(NAME).byte $(NAME).js
