Runtime: Lexing and Weak
Ignore-this: 2593a61a8984ad0801d9bb4e6a753890

darcs-hash:20100611112135-41a61-d7a2eb3608359814a7826b55281719a7820336aa

--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,4 +1,6 @@
-FILES=mlString.js ieee_754.js int64.js md5.js marshall.js stdlib.js jslib.js
+FILES= 	mlString.js ieee_754.js int64.js md5.js marshall.js \
+	lexing.js parsing.js \
+	stdlib.js jslib.js
 
 runtime.js: $(FILES)
 	cat $(FILES) > runtime.js
