--- a/examples/Makefile.common
+++ b/examples/Makefile.common
@@ -15,5 +15,5 @@ $(NAME).byte: $(OBJS)
 %.cmo: %.ml ../../lib/$(STDLIB)
 	$(OCAMLC) -g -c $<
 
-clean:
+clean::
 	rm -f *.cm[io] $(NAME).byte $(NAME).js
