--- a/Makefile.conf
+++ b/Makefile.conf
@@ -3,7 +3,6 @@ BINDIR = $(shell dirname `which ocamlc`)
 
 ####
 
-LIBRARY=js
-LIBNAME=ocaml2js
-COMPILER=ocaml2js
-
+LIBRARY=js_of_ocaml
+LIBNAME=js_of_ocaml
+COMPILER=js_of_ocaml
