Debugging console + DOM API cleanup
Ignore-this: b9e146502c931311a44d23dc84a9071f

darcs-hash:20100615084844-41a61-5c64a775d24795410216a7616863e471b4f281a2

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,5 @@
 
-MLOBJS= js.cmo dom.cmo dom_html.cmo xmlHttpRequest.cmo lwt_js.cmo
+MLOBJS= js.cmo dom.cmo dom_html.cmo xmlHttpRequest.cmo lwt_js.cmo console.cmo
 COBJS= stubs.o
 OBJS=$(MLOBJS) $(COBJS)
 
