Library: documentation generation
Ignore-this: cdcc4fbe1eaf1d7e5344e171572bb7a3

darcs-hash:20100622115312-c8b6b-c3b0ff3d89beecfa93cde9af5956ffa0cbb8a485

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,11 +1,12 @@
 
 MLOBJS= js.cmo dom.cmo dom_html.cmo xmlHttpRequest.cmo lwt_js.cmo firebug.cmo
+MLINTFS= $(MLOBJS:.cmo=.mli)
 COBJS= stubs.o
 OBJS=$(MLOBJS) $(COBJS)
 
 include ../Makefile.conf
 
-all: $(LIBNAME).cma syntax/pa_js.cmo
+all: $(LIBNAME).cma syntax/pa_js.cmo doc
 
 $(LIBNAME).cma: $(OBJS)
 	ocamlmklib -o $(LIBNAME) $(OBJS)
@@ -29,6 +30,12 @@ stubs.c: $(MLOBJS:cmo=ml)
 	 (sed -n -e 's/.*external.*"\([^"%]*\)".*/D(\1)/p' $(MLOBJS:cmo=ml) | \
 	  sort | uniq)) \
         > stubs.c
+
+.PHONY: doc
+doc: doc/index.html
+doc/index.html: $(MLINTFS)
+	mkdir -p doc
+	ocamlfind ocamldoc -d doc -package lwt -html $^
 
 clean:
 	rm -f *.cm[ioa] *.[ao] *.so
