module Url added to lib
Ignore-this: 37ceb740d065bf7b30fce09f224b94

darcs-hash:20100730124113-8ea92-1637c58835df2eb62ba5794bb6267e23f51b4aa9

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,5 @@
 
-MLOBJS= js.cmo dom.cmo dom_html.cmo xmlHttpRequest.cmo lwt_js.cmo firebug.cmo
+MLOBJS= js.cmo dom.cmo dom_html.cmo xmlHttpRequest.cmo lwt_js.cmo firebug.cmo url.cmo
 MLINTFS= $(MLOBJS:.cmo=.mli)
 COBJS= stubs.o
 OBJS=$(MLOBJS) $(COBJS)
