regexp library added
Ignore-this: 7591f789097279f275ca0a36bad85d72

darcs-hash:20100813141743-8ea92-82cd9653f4aacb73b4a1b87266caf810e83a8daf

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,5 @@
 
-MLOBJS= js.cmo dom.cmo dom_html.cmo lwt_js.cmo firebug.cmo url.cmo xmlHttpRequest.cmo events.cmo
+MLOBJS= js.cmo dom.cmo dom_html.cmo lwt_js.cmo firebug.cmo regexp.cmo url.cmo xmlHttpRequest.cmo events.cmo
 MLINTFS= $(MLOBJS:.cmo=.mli)
 COBJS= stubs.o
 OBJS=$(MLOBJS) $(COBJS)
