--- a/examples/Makefile.common
+++ b/examples/Makefile.common
@@ -15,5 +15,8 @@ $(NAME).byte: $(OBJS)
 %.cmo: %.ml ../../lib/$(STDLIB)
 	$(OCAMLC) -g -c $<
 
+%.cmi: %.mli ../../lib/$(STDLIB)
+	$(OCAMLC) -g -c $<
+
 clean::
 	rm -f *.cm[io] $(NAME).byte $(NAME).js
