Examples: removed ocamlc -g compilation option
Ignore-this: 6e875d93fca44e9e5e1545248f242efc

darcs-hash:20101124165416-c8b6b-ffadb004f18c81e4dd007d54c536ae318d5c68f0

--- a/examples/Makefile.common
+++ b/examples/Makefile.common
@@ -13,10 +13,10 @@ $(NAME).byte: $(OBJS)
 	$(OCAMLC) -linkpkg -o $@ $(STDLIB) $^
 
 %.cmo: %.ml ../../lib/$(STDLIB)
-	$(OCAMLC) -g -c $<
+	$(OCAMLC) -c $<
 
 %.cmi: %.mli ../../lib/$(STDLIB)
-	$(OCAMLC) -g -c $<
+	$(OCAMLC) -c $<
 
 clean::
 	rm -f *.cm[io] $(NAME).byte $(NAME).js
