Improved the portability of Makefiles
Ignore-this: d7ba19a460fbcac7b91d8a00c752c4f5

darcs-hash:20101125171415-c8b6b-38eb585276e45aa0762d632aefb2b29b96496bd4

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -30,7 +30,6 @@ clean:
 	rm -f js_of_ocaml compile
 
 depend:
-	find . -maxdepth 1 -name private -prune -o -regex ".*\\.mli?" | \
-	xargs ocamldep > .depend
+	ocamldep *.ml *.mli > .depend
 
 include .depend
