Add file and form manipulation interface
Ignore-this: deb1a17b03baaf73d228893d886063d5

darcs-hash:20110224182436-0cb73-8202a7091e393a70f08ecae57c9c9d5572f966f5

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,4 @@
-MLOBJS= js.cmo dom.cmo dom_html.cmo dom_events.cmo lwt_js.cmo firebug.cmo regexp.cmo url.cmo xmlHttpRequest.cmo event_arrows.cmo
+MLOBJS= js.cmo dom.cmo dom_html.cmo dom_events.cmo lwt_js.cmo firebug.cmo regexp.cmo url.cmo file.cmo form.cmo xmlHttpRequest.cmo event_arrows.cmo
 MLINTFS= $(MLOBJS:.cmo=.mli)
 COBJS= stubs.o
 OBJS=$(MLOBJS) $(COBJS)
