--- a/benchmarks/report-sizes.config
+++ b/benchmarks/report-sizes.config
@@ -4,14 +4,14 @@ histogram sizes "" js_of_ocaml/full #000000 Generated code + runtime
 histogram sizes "" ocamljs #22bb22 Ocamljs generated code
 
 # second layer
-histogram sizes "" ml #729fcf Source
-histogram sizes "" byte #204a87 Bytecode
-histogram sizes "" js_of_ocaml/generated #fbaf4f Generated code
-histogram sizes "" ocamljs #22bb22 Ocamljs generated code
-
-#histogram blank
-#histogram blank
+#histogram sizes "" ml #729fcf Source
+#histogram sizes "" byte #204a87 Bytecode
 #histogram sizes "" js_of_ocaml/generated #fbaf4f Generated code
-#histogram blank
+#histogram sizes "" ocamljs #22bb22 Ocamljs generated code
+
+histogram blank
+histogram blank
+histogram sizes "" js_of_ocaml/generated #fbaf4f Generated code
+histogram blank
 
 
