Benchmarks: Makefile and various enhancements
Ignore-this: a328df9fc0d947af254397f0fb5895a8

darcs-hash:20110320182415-1b86b-d6adfdabc63f79e5ca82721d89f124b46fcf6215

--- a/benchmarks/report-sizes.config
+++ b/benchmarks/report-sizes.config
@@ -1,7 +1,7 @@
 histogram sizes "" ml #729fcf Source
-histogramref sizes "" byte #204a87 Bytecode
-histogram sizes "" js_of_ocaml/full #000000 Generated code + runtime
-histogram sizes "" ocamljs #22bb22 Ocamljs generated code
+histogram sizes "" byte #204a87 Bytecode
+histogramref sizes "" js_of_ocaml/full #000000 runtime
+histogram sizes "" ocamljs #22bb22 Ocamljs
 
 # second layer
 #histogram sizes "" ml #729fcf Source
