--- a/Makefile.conf
+++ b/Makefile.conf
@@ -6,3 +6,8 @@ BINDIR = $(shell dirname `which ocamlc`)
 LIBRARY=js_of_ocaml
 LIBNAME=js_of_ocaml
 COMPILER=js_of_ocaml
+
+
+### Optional dependencies: ocsigen-deriving
+
+DERIVING=$(shell ocamlfind query deriving-ocsigen)
