--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,23 +1,49 @@
-MLOBJS= js.cmo dom.cmo dom_html.cmo dom_events.cmo lwt_js.cmo firebug.cmo regexp.cmo url.cmo file.cmo form.cmo xmlHttpRequest.cmo event_arrows.cmo
+MLOBJS= js.cmo dom.cmo dom_html.cmo dom_events.cmo lwt_js.cmo firebug.cmo regexp.cmo url.cmo xmlHttpRequest.cmo event_arrows.cmo
 MLINTFS= $(MLOBJS:.cmo=.mli)
 COBJS= stubs.o
 OBJS=$(MLOBJS) $(COBJS)
 
+JSON_OBJS=$(addprefix deriving_json/,deriving_bi_outbuf.cmo deriving_Json_lexer.cmo deriving_Json.cmo)
+
 include ../Makefile.conf
 
-all: $(LIBNAME).cma syntax/pa_js.cmo doc
+ifneq "${DERIVING}" ""
+PA_DERIVING=syntax/pa_deriving_Json.cmo
+DERIVING_JSON=deriving_json.cma deriving_json.cmxa
+endif
+
+all: $(LIBNAME).cma syntax/pa_js.cmo ${PA_DERIVING} ${DERIVING_JSON} doc
 
 $(LIBNAME).cma: $(OBJS)
 	ocamlmklib -o $(LIBNAME) $(OBJS)
 
+deriving_json.cma: $(JSON_OBJS)
+	ocamlfind ocamlc -a -o $@ $^
+
+deriving_json.cmxa: $(JSON_OBJS:.cmo=.cmx)
+	ocamlfind ocamlopt -a -o $@ $^
+
 syntax/pa_js.cmo: syntax/pa_js.ml
 	ocamlfind ocamlc -package camlp4.extend,camlp4.quotations -syntax camlp4o -c $<
+
+syntax/pa_deriving_Json.cmo: syntax/pa_deriving_Json.ml
+	ocamlfind ocamlc -package deriving-ocsigen,camlp4.quotations.o -syntax camlp4o -c $<
 
 %.cmo: %.ml syntax/pa_js.cmo
 	ocamlfind ocamlc -pp "camlp4o syntax/pa_js.cmo" -package lwt -c -g $<
 
 %.cmi: %.mli
-	ocamlfind ocamlc -package lwt -c $<
+	ocamlfind ocamlc -package lwt -I deriving_json -c $<
+
+%.ml: %.mll
+	ocamllex $<
+
+${JSON_OBJS}: %.cmo: %.ml ${PA_DERIVING}
+	ocamlfind ocamlc -package deriving-ocsigen.syntax -syntax camlp4o -ppopt ${PA_DERIVING} -I deriving_json -c $<
+
+${JSON_OBJS:.cmo=.cmx}: %.cmx: %.ml ${PA_DERIVING}
+	ocamlfind ocamlopt -package deriving-ocsigen.syntax -syntax camlp4o -ppopt ${PA_DERIVING} -I deriving_json -c $<
+
 
 %.o: %.c
 	ocamlfind ocamlc -package lwt -c $<
@@ -45,10 +71,19 @@ ocsi_doc:
 clean:
 	rm -f *.cm[ioa] *.[ao] *.so
 	rm -f syntax/*.cm[io]
+	rm -f deriving_json/*.cm[ioa] deriving_json/*.[ao] deriving_json/*.so
+	rm -f deriving_json/deriving_Json_lexer.ml
 	rm -f stubs.c
 
-depend: syntax/pa_js.cmo
-	ls *.ml *.mli | grep -v pa_js.ml | \
-	xargs ocamldep -pp "camlp4o syntax/pa_js.cmo" > .depend
+depend: syntax/pa_js.cmo ${PA_DERIVING}
+	ocamldep -pp "camlp4o syntax/pa_js.cmo" *.ml *.mli > .depend
+ifneq "${DERIVING}" ""
+	${MAKE} --no-print-directory deriving_json/deriving_Json_lexer.ml
+	ls deriving_json/*.mli deriving_json/*.ml | \
+	  grep -v deriving_Json_stdlib.mli | \
+	  xargs ocamlfind ocamldep -I deriving_json -package deriving-ocsigen.syntax -syntax camlp4o -ppopt ${PA_DERIVING} >> .depend
+	@# camlp4 3.12.0 fails on (module type of ...)
+	ocamldep -I deriving_json deriving_json/deriving_Json_stdlib.mli  >> .depend
+endif
 
 include .depend
