--- a/benchmarks/report-size.config
+++ b/benchmarks/report-size.config
@@ -1,7 +1,7 @@
-histogram sizes "" ml #729fcf Source
+histogram sizes "" ml #83afdf Source
 histogram sizes "" byte #204a87 Bytecode
-histogramref sizes "" js_of_ocaml/full #000000 runtime
-histogram sizes "" ocamljs #22bb22 Ocamljs
+histogramref sizes "" js_of_ocaml/full #873f00 Runtime
+#histogram sizes "" ocamljs #22bb22 Ocamljs
 
 # second layer
 #histogram sizes "" ml #729fcf Source
@@ -12,6 +12,6 @@ histogram sizes "" ocamljs #22bb22 Ocamljs
 histogram blank
 histogram blank
 histogram sizes "" js_of_ocaml/generated #fbaf4f Generated code
-histogram blank
+#histogram blank
 
 
