--- a/benchmarks/run.config
+++ b/benchmarks/run.config
@@ -1,4 +1,4 @@
 interpreter v8 /home/vincent/src/js/v8-read-only/shell
 interpreter tm /home/vincent/src/js/mozilla-central-7dda35eab7fc/objdir-ff-release/dist/bin/js -j -m
 interpreter nitro /home/vincent/src/js/WebKit/Programs/jsc
-interpreter oldv8 /usr/bin/nodejs
+#interpreter oldv8 /usr/bin/nodejs
